# apertium-sme-sma

./: .gitattributes  .gitignore  HACKING  Makefile.am  README  apertium-sme-sma.sma-sme.lrx  apertium-sme-sma.sma-sme.lsx  apertium-sme-sma.sma-sme.metalrx  apertium-sme-sma.sma-sme.rtx  apertium-sme-sma.sma-sme.t1x  apertium-sme-sma.sma.lexc  apertium-sme-sma.sma.twol  apertium-sme-sma.sme-sma.dis.rlx  apertium-sme-sma.sme-sma.dix  apertium-sme-sma.sme-sma.lex  apertium-sme-sma.sme-sma.lrx  apertium-sme-sma.sme-sma.lsx  apertium-sme-sma.sme-sma.metalrx  apertium-sme-sma.sme-sma.mor.rlx  apertium-sme-sma.sme-sma.rlx  apertium-sme-sma.sme-sma.rtx  apertium-sme-sma.sme-sma.syn.rlx  apertium-sme-sma.sme-sma.t1x  apertium-sme-sma.sme-sma.t2x  apertium-sme-sma.sme-sma.t3x  apertium-sme-sma.sme-sma.t4x  apertium-sme-sma.sme-sma.t5x  apertium-sme-sma.sme.lexc  bidix47269.dix  check_mt-otpt.py  check_mt-otpt_wer.py  configure.ac  configure~  hash-star-report.sh  metalrx-to-lrx.xslt  modes.xml  pending-tests.sh  rm-deriv-cmp.twol  sh_hash_report_sma.txt  sh_star_report_sma.txt  (+3 more)
VIKTIGE_KOMMANDO/: KOMMANDO_MT_OVERSETTING.txt  KOmmando_Oversetting_SIKOR.css  ORDBOK_sme_nob_Kommando_Satni.txt
dev/: 2tobefixed.txt  Daahkesjahteme_2.txt  Daahkesjahteme_ListeFraSameting.txt  Departemeente_SMA 5.txt  GG_Lastoeh.txt  Olli_kronikk_sme2sma.html  Oversatt_sme_sma_Daahkesjahteme_.txt  all.html  allparallel.html  analyse-all-stages.sh  apertium-sme-sma.sme-sma.t1x.BACKUP  apertium.analysis.relabel  apertium.generation.relabel  apertium.relabel  bidix-sanity.sh  boazodoaluhahkan_sme2sma.html  cg-tag-convertor.py  check_sme_verbs.sh  cuolmmat_sme2sma.html  departemente.txt  dixtest.sh  doble_sma_verb.list  ferdigeordpar.csv  fjellheim_sme2sma.html  gaajhke.sma.txt  geatnegahtton_sme2sma.html  generation-errors.sh  generation-report-schoolcorpus.sme-sma.txt  generation-report.sme-sma.txt  generation-report.txt  generation-schoolcorpus-errors.sh  generation-test.sh  gtcg2apertium.py  hash-report.freq  langs.cfg.in  liste_sameting.txt  lookatverbs.txt  manaid_vuoigatvuodat_sme2sma.html  missing_freq_a  missing_freq_a_cmp  (+40 more)
eval/: evaluation_results.txt
inc/: 00_readme.txt  A_cross_ana_00  A_cross_ana_00_multis_sme  A_intersection  A_intersection_multis  A_intersection_singles  A_loan_ana_00  A_miidappe2  A_syn_ana_00  N_cross_ana_00_multis_sme  N_cross_ana_00_singles_sme  N_decomp_ana_00_multis_nob  N_decomp_ana_00_singles_nob  N_intersection_multis  N_intersection_singles  N_loan_ana_00_multis_nob  N_loan_ana_00_singles_nob  N_loan_ana_00_singles_sme  N_miidappe2  N_precomp_ana_00_multis_nob  N_precomp_ana_00_singles_nob  N_syn_ana_00_multis_nob  N_syn_ana_00_singles_nob  V_cross_ana_00_multis_sme  V_cross_ana_00_singles_sme  V_intersection_multis  V_intersection_singles  V_miidappe2  V_syn_ana_00_multis_nob  V_syn_ana_00_singles_nob
paper/: Makefile  notes.txt  paper.bib  paper.tex
pseudo_tmx_data/: SP-01-2012_sme2sma.tmx  SP-02-2012_sme2sma.tmx  SP-05-2012_sme2sma.tmx  SP-06-2012_sme2sma.tmx  SP-08-2012_sme2sma.tmx  SP-09-2012_sme2sma.tmx  SP-10-2012_sme2sma.tmx  SP-11-2012_sme2sma.tmx  SP-12-2012_sme2sma.tmx  SP-14-2012_sme2sma.tmx  SP-15-2012_sme2sma.tmx  SP-16-2012_sme2sma.tmx  SP-17-2012_sme2sma.tmx  SP-18-2012_sme2sma.tmx  SP-51-2015_sme2sma.tmx  SP-52-2015_sme2sma.tmx  cahceravgga_sme2sma.tmx  manaid_vuoigatvuodat_sme2sma.tmx
t/: config.sh  latest-pending.results  latest-regression.results  wiki-tests
test/: sma-sme-biltrans-expected.txt  sma-sme-chunker-expected.txt  sma-sme-disam-expected.txt  sma-sme-generator-expected.txt  sma-sme-generator-gold.txt  sma-sme-input.txt  sma-sme-interchunk1-expected.txt  sma-sme-interchunk3-expected.txt  sma-sme-lex-expected.txt  sma-sme-morph-expected.txt  sma-sme-postchunk-expected.txt  sma-sme-pretransfer-expected.txt  sma-sme-rtx-input.txt  sma-sme-syntax-expected.txt  sme-sma-pending-biltrans-expected.txt  sme-sma-pending-chunker-expected.txt  sme-sma-pending-disam-expected.txt  sme-sma-pending-generator-expected.txt  sme-sma-pending-generator-gold.txt  sme-sma-pending-input.txt  sme-sma-pending-interchunk1-expected.txt  sme-sma-pending-interchunk2-expected.txt  sme-sma-pending-interchunk3-expected.txt  sme-sma-pending-lex-expected.txt  sme-sma-pending-morph-expected.txt  sme-sma-pending-postchunk-expected.txt  sme-sma-pending-pretransfer-expected.txt  sme-sma-pending-syntax-expected.txt  sme-sma-regression-biltrans-expected.txt  sme-sma-regression-chunker-expected.txt  sme-sma-regression-disam-expected.txt  sme-sma-regression-generator-expected.txt  sme-sma-regression-generator-gold.txt  sme-sma-regression-input.txt  sme-sma-regression-interchunk1-expected.txt  sme-sma-regression-interchunk2-expected.txt  sme-sma-regression-interchunk3-expected.txt  sme-sma-regression-lex-expected.txt  sme-sma-regression-morph-expected.txt  sme-sma-regression-postchunk-expected.txt  (+22 more)
texts/: NY_LEDER_SAMIS_text_sma.txt  NY_L_V_P_text_sma.txt  NY_Saemien_Histovrije_sma_text.txt  Ovdasatni.txt  adpositions_sme.txt  albert-sma.html  albert-sma.txt  albert-sme.txt  brosjyre_foresatte_np08_sma.txt  brosjyre_foresatte_np08_sma_mt.txt  brosjyre_foresatte_np08_sme.txt  ebbasofie-s-sma.txt  ebbasofie-s-sma.txt_mt  ebbasofie-s-sma.txt_mt2  ebbasofie-s-sme.txt  ebbasofie-sma.htm  elga-sma.htm  fjellheim-sma.htm  fjellheim-sma.txt  fjellheim-sma.txt_mt  fjellheim-sme.txt  fordypning_i_samisk_sma.txt  fordypning_i_samisk_sma.txt_mt  fordypning_i_samisk_sme.txt  jonar-sma.htm  jonar-sma.txt  jonar-sme.txt  jorgaleddjiide_sma.txt  jorgaleddjiide_sme.txt  nora-sma.htm  num_sentences_sme.txt  samediggeweb_sma.txt  samediggeweb_sme.txt  samediggi_sma.txt  samediggi_sma.txt.mt2  samediggi_sme.txt  samediggidiedadus_samegiela_birra_2012.nob.txt  samediggidiedadus_samegiela_birra_2012.sma.txt  samediggidiedadus_samegiela_birra_2012.sme.txt  samisk_som_andresprak_sma.txt  (+38 more)
tmx_data/: Olli_kronikk_sme2sma.tmx  SDprestale.tmx  SDprestale2021.tmx  boazodoaluhahkan_sme2sma.tmx  boazopolitihkka_sme2sma.tmx  cuolmmat_sme2sma.tmx  fjellheim_sme2sma.tmx  geatnegahtton_sme2sma.tmx  mearkkasit.tmx  (+7 more)
(+321 files in other folders)
